--- a/META.yml
+++ b/META.yml
@@ -3,12 +3,19 @@ abstract: 'patch CPAN distributions'
 author:
   - 'Jozef Kutej <jkutej@cpan.org>'
 build_requires:
+  File::Temp: 0
+  File::chdir: 0
   Module::Build::SysPath: 0.13
+  Test::Differences: 0
+  Test::Dirs: 0.03
+  Test::Exception: 0
   Test::More: 0
 configure_requires:
+  File::Which: 0
   Module::Build: 0.36
-  Module::Build::SysPath: 0.13
-generated_by: 'Module::Build version 0.3603'
+  Module::Build::SysPath: 0.16
+dynamic_config: 1
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.112150'
 keywords:
   - cpan
   - patch
@@ -20,10 +27,10 @@ name: CPAN-Patches
 provides:
   CPAN::Patches:
     file: lib/CPAN/Patches.pm
-    version: 0.03
+    version: 0.04
   CPAN::Patches::SPc:
     file: lib/CPAN/Patches/SPc.pm
-    version: 0.03
+    version: 0.04
 requires:
   Carp: 0
   File::chdir: 0
@@ -39,4 +46,4 @@ resources:
   bugtracker: http://github.com/jozef/CPAN-Patches/issues
   license: http://dev.perl.org/licenses/
   repository: git://github.com/jozef/CPAN-Patches.git
-version: 0.03
+version: 0.04
